added in a circle

--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@
   color: blue;
   font-size: 50px;
 }
+
+#circle {
+    background: lightblue;
+    border-radius: 50%;
+    width: 500px;
+    height: 500px;
+    margin: auto;
+}
