styled the circle

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #main_header {
-  color: black;
+  color: white;
   font-size: 50px;
   margin: auto;
 }
@@ -10,4 +10,8 @@
     width: 500px;
     height: 500px;
     margin: auto;
+}
+
+body {
+  background-color: black;
 }
