added in gif tests :)

--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,18 @@
   margin: auto;
 }
 
-#circle {
-    background: lightblue;
-    border-radius: 50%;
-    width: 500px;
-    height: 500px;
-    margin: auto;
-}
+
 
 body {
   background-color: black;
+}
+
+#Ricardo_dance {
+ height: 900px;
+ widthL: 900px;
+}
+
+#Rick_dance {
+ height: 900px;
+ widthL: 900px;
 }
